--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#81C784</color>
     <color name="colorPrimaryDark">#4CAF50</color>
     <color name="colorAccent">#558B2F</color>
-    <color name="derdiedasColor">#33691E</color>
+    <color name="questionColor">#33691E</color>
     <color name="white">#FFFFFF</color>
     <color name="viewcolor">#000000</color>
 
