--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,12 +11,14 @@
     </style>
 
 
-    <style name="quizView" parent="AppTheme">
+    <style name="quizQuestionView" parent="AppTheme">
         <item name="android:layout_width">match_parent</item>
-
-
-
     </style>
+
+    <style name="quizQuestionGroupView" parent="AppTheme">
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
 
     <style name="quizQuestionName" parent="AppTheme">
         <item name="android:layout_width">match_parent</item>
@@ -25,20 +27,14 @@
     </style>
 
 
-    <style name="quizUserNameEditText" parent="AppTheme">
-
-        <item name="android:hint">@string/editText_Name</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:singleLine">true</item>
-        <item name="android:inputType">text</item>
-
-    </style>
-
     <style name="quizQuestionLinearLayout" parent="AppTheme">
         <item name="android:orientation">horizontal</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="quizQuestionBLinearLayout" parent="quizQuestionLinearLayout">
+        <item name="android:orientation">vertical</item>
     </style>
 
     <style name="quizScroll" parent="AppTheme">
@@ -52,19 +48,27 @@
         <item name="android:layout_height">wrap_content</item>
 
     </style>
+    <style name="quizBGroupQuestionStyle" parent="quizQuestionStyle">
 
-    <style name="quizRadioGroup" parent="AppTheme">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:gravity">center</item>
+
+    </style>
+
+
+
+    <style name="quizAnswerGroup" parent="AppTheme">
         <item name="android:orientation">horizontal</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+
+
     <style name="quizRadioButton" parent="AppTheme">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-
-
     </style>
 
 
@@ -73,7 +77,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textColor">@color/white</item>
-
     </style>
 </resources>
 
